# Computer-systems-and-networks

A text messaging program/: README.md
A text messaging program/Client/: Cargo.toml
A text messaging program/Client/src/: connection.rs  service.rs  settings.rs  state.rs  types.rs
A text messaging program/Server/: Cargo.toml
A text messaging program/Server/src/: main.rs  messagesPool.rs  reader.rs  service.rs  settings.rs  state.rs
A text messaging program/Server/src/manageConnection/: dataManager.rs  manager.rs  mod.rs  streamManager.rs
Remote file storage over HTTP REST protocol/: Cargo.toml  README.md
Remote file storage over HTTP REST protocol/Client/: Cargo.toml
Remote file storage over HTTP REST protocol/Client/src/: main.rs
Remote file storage over HTTP REST protocol/src/: main.rs  usersBD.rs
Scanning the local network/: Cargo.toml  README.md
Scanning the local network/src/: dbM.txt  main.rs
