workspace = { members = ["client"] }
[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
once_cell = "1.18"
chrono = "0.4.38"
reqwest = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
tokio = "1.37.0"