[package]
name = "ksisproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0"
oui = "0.8.1"
local-ip = "0.1.0"
local-ip-address = "0.5.7"
hostname = "0.3.1"
ipnetwork = "0.20.0"
eui48 = "1.1.0"
